syntax = "proto3";

service PropertyTypeService {
    rpc CreatePropertyType (PropertyTypeMessage) returns (CreatePropertyTypeResponse) {
    }
}

message PropertyTypeMessage {
    int64 id = 1;
    string name = 2;
    string description = 3;
}

message CreatePropertyTypeResponse {
    PropertyTypeMessage propertyType = 1;
    string returnMessage = 2;
}
