syntax = "proto3";

service AdRatingService {
    rpc RateAd (AdRatingMessage) returns (RateAdResponseMessage) {}
}

message AdRatingMessage {
    int64 id = 1;
    int32 rating = 2;
    int64 request_id = 3;
    int64 ad_id = 4;
    int64 property_id = 5;
    double average_rating = 6;
}

message RateAdResponseMessage {
    AdRatingMessage rating_message = 1;
    string return_message = 2;
}
